# engine

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md  mods.toml  world.toml
.github/workflows/: build.yml
.hermes_docs/: DESIGN.md  tech-choices.md
.hermes_docs/specs/p0/: 01-tick-protocol-spec.md  02-command-validation-spec.md  07-world-rules-engine.md  08-game-api-idl.md
.tmp/rustdoctestVQn2Qi/: rustdoc-cfgs
benches/: command_throughput.rs  rollback_snapshot.rs  snapshot_capture.rs  tick_loop.rs
mods/fog-of-war/: Cargo.toml  README.md  mod.toml
mods/fog-of-war/src/: lib.rs
mods/resource-decay/: Cargo.toml  README.md  mod.toml
mods/resource-decay/src/: lib.rs
mods/vanilla-boss/: Cargo.toml  README.md  mod.toml
mods/vanilla-boss/src/: lib.rs
scripts/: fetch-mods.sh
sdk-templates/rust/: .gitignore  Cargo.toml  README.md
sdk-templates/rust/src/: bot.rs  commands.rs  lib.rs  types_template.rs
sdk-templates/ts/: .gitignore  README.md  package-lock.json  package.json  vitest.config.ts
sdk-templates/ts/examples/: basic-harvester.ts
sdk-templates/ts/examples/starter-bot/: README.md  package.json  tsconfig.json
sdk-templates/ts/examples/starter-bot/assembly/: tick.ts
sdk-templates/ts/examples/starter-bot/src/: bot.ts
sdk-templates/ts/src/: commands.ts  index.ts  tick.ts  types_template.ts  validation.ts  visibility.ts  worldRules.ts
sdk-templates/ts/test/: sdk.test.ts  starter-bot.test.ts
src/: arena.rs  arena_admin.rs  clickhouse.rs  command.rs  components.rs  contract_exports.rs  dragonfly.rs  economy.rs  fdb.rs  hot_cache.rs  idl.rs  lib.rs  main.rs  mcp.rs  mcp_statistics.rs  metrics.rs  mod_cli.rs  onboarding.rs  plugins.rs  pve.rs  ranking.rs  realtime.rs  redb_store.rs  replay_storage.rs  resource_ledger.rs  resources.rs  rule_module.rs  sandbox_transport.rs  scheduler.rs  sdk_gen.rs  security.rs  shard.rs  sim.rs  swarm_cli.rs  swarm_deploy.rs  tick.rs  tikv.rs  tutorial.rs  visibility.rs  world.rs
src/auth/: mod.rs
src/mcp/: mcp_statistics.rs
src/npc/: ai.rs  components.rs  events.rs  loot.rs  mod.rs  strongholds.rs
src/systems/: aging_system.rs  cargo_in_transit_system.rs  combat_system.rs  controller_repair_system.rs  controller_system.rs  damage_application_system.rs  death_cleanup_system.rs  death_mark_system.rs  debilitate_buffer_system.rs  debilitate_system.rs  decay_system.rs  depot_repair_system.rs  disrupt_buffer_system.rs  disrupt_system.rs  drain_buffer_system.rs  drain_system.rs  drone_env_var_system.rs  fabricate_buffer_system.rs  fortify_buffer_system.rs  fortify_system.rs  global_storage_system.rs  hack_buffer_system.rs  hack_system.rs  leech_buffer_system.rs  memory_upkeep_system.rs  mod.rs  npc_spawn_system.rs  overload_buffer_system.rs  overload_system.rs  pvp_block_system.rs  regeneration_system.rs  room_state_system.rs  seed_rotation_system.rs  spawn_system.rs  spawning_grace_system.rs  special_attack_reducer.rs  starting_resources_system.rs  status_advance_system.rs  wreckage_system.rs
tests/: dependency_identity.rs  economic_balance.rs  load.rs
xtask/: Cargo.toml
xtask/src/: main.rs  mods.rs
xtask/src/mods/: cargo.rs  config.rs  git.rs  update.rs
xtask/tests/: mods_update.rs
xtask/tests/support/: mod.rs
