[workspace]
members = [
    ".",
    "mods/combat-core",
    "mods/depot-storage",
    "mods/empire-upkeep",
    "mods/fog-of-war",
    "mods/pve-spawning",
    "mods/resource-decay",
    "mods/special-attacks",
    "mods/vanilla-boss",
]

[patch."https://github.com/game-swarm/engine.git"]
swarm-engine = { path = "." }

[package]
name = "swarm-engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "swarm_engine"
path = "src/lib.rs"

[[bin]]
name = "swarm-engine"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.19", default-features = false, features = ["serialize"] }
async-nats = "0.49"
blake3 = "1"
crc32c = "0.6"
ed25519-dalek = "2"
futures-util = "0.3"
getrandom = "0.4"
indexmap = { version = "2", features = ["serde"] }
libc = "0.2"
redb = "4"
rayon = "1.12"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1.2.1", features = ["derive"] }
sha2 = "0.11"
tokio = { version = "1", features = ["full"] }
toml = "1"
ts-rs = { version = "12.0.1", features = ["serde-compat"] }
wasmparser = "0.252"

[features]
default = []
mod_combat_core = []
mod_depot_storage = []
mod_empire_upkeep = []
mod_fog_of_war = []
mod_pve_spawning = []
mod_resource_decay = []
mod_special_attacks = []
mod_vanilla_boss = []
vanilla_mods = [
    "mod_combat_core",
    "mod_depot_storage",
    "mod_empire_upkeep",
    "mod_fog_of_war",
    "mod_pve_spawning",
    "mod_resource_decay",
    "mod_special_attacks",
    "mod_vanilla_boss",
]

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
swarm-mod-combat-core = { path = "mods/combat-core" }
swarm-mod-depot-storage = { path = "mods/depot-storage" }
swarm-mod-empire-upkeep = { path = "mods/empire-upkeep" }
swarm-mod-fog-of-war = { path = "mods/fog-of-war" }
swarm-mod-pve-spawning = { path = "mods/pve-spawning" }
swarm-mod-resource-decay = { path = "mods/resource-decay" }
swarm-mod-special-attacks = { path = "mods/special-attacks" }
swarm-mod-vanilla-boss = { path = "mods/vanilla-boss" }
tempfile = "3"
wat = "1"

[[bench]]
name = "rollback_snapshot"
harness = false

[[bench]]
name = "command_throughput"
harness = false

[[bench]]
name = "snapshot_capture"
harness = false

[[bench]]
name = "tick_loop"
harness = false
